--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ excludes=
 file.reference.animateFX-1.2.2.jar=C:\\Users\\Lenovo\\Documents\\Escolar\\Integracion\\Practicas\\TestingFX\\libs\\animateFX-1.2.2.jar
 file.reference.controlsfx-8.40.17-javadoc.jar=C:\\Users\\Lenovo\\Documents\\Escolar\\Integracion\\Practicas\\TestingFX\\libs\\controlsfx-8.40.17-javadoc.jar
 file.reference.controlsfx-8.40.18.jar=C:\\Users\\Lenovo\\Documents\\Escolar\\Integracion\\Practicas\\TestingFX\\libs\\controlsfx-8.40.18.jar
+file.reference.gson-2.9.1.jar=libs\\gson-2.9.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -44,7 +45,8 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.animateFX-1.2.2.jar}:\
     ${file.reference.controlsfx-8.40.17-javadoc.jar}:\
-    ${file.reference.controlsfx-8.40.18.jar}
+    ${file.reference.controlsfx-8.40.18.jar}:\
+    ${file.reference.gson-2.9.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
