Finalizado módulo Unidades: Validación VIN 17 chars, baja lógica con motivo y alertas personalizadas

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,20 +33,22 @@ dist.jar=${dist.dir}/PacketWorld.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.animateFX-1.2.2.jar=C:\\Users\\Lenovo\\Documents\\Escolar\\Integracion\\Practicas\\TestingFX\\libs\\animateFX-1.2.2.jar
-file.reference.controlsfx-8.40.17-javadoc.jar=C:\\Users\\Lenovo\\Documents\\Escolar\\Integracion\\Practicas\\TestingFX\\libs\\controlsfx-8.40.17-javadoc.jar
-file.reference.controlsfx-8.40.18.jar=C:\\Users\\Lenovo\\Documents\\Escolar\\Integracion\\Practicas\\TestingFX\\libs\\controlsfx-8.40.18.jar
+file.reference.AnimateFX-1.2.1.jar=D:\\Downloads\\AnimateFX-1.2.1.jar
+file.reference.controlsfx-8.40.14.jar=D:\\Downloads\\controlsfx-8.40.14.jar
 file.reference.gson-2.9.1.jar=libs\\gson-2.9.1.jar
+file.reference.mybatis-3.3.1.jar=D:\\Downloads\\mybatis-3.3.1.jar
+file.reference.mysql-connector-java-8.0.20.jar=D:\\Downloads\\mysql-connector-java-8.0.20.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.animateFX-1.2.2.jar}:\
-    ${file.reference.controlsfx-8.40.17-javadoc.jar}:\
-    ${file.reference.controlsfx-8.40.18.jar}:\
-    ${file.reference.gson-2.9.1.jar}
+    ${file.reference.gson-2.9.1.jar}:\
+    ${file.reference.AnimateFX-1.2.1.jar}:\
+    ${file.reference.controlsfx-8.40.14.jar}:\
+    ${file.reference.mybatis-3.3.1.jar}:\
+    ${file.reference.mysql-connector-java-8.0.20.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
