--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -10,4 +10,4 @@ javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
 jlink.strip=false
-user.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\25\\build.properties
+user.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\24\\build.properties
