--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=PacketWorld
 application.vendor=Lenovo
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -33,24 +34,24 @@ dist.jar=${dist.dir}/PacketWorld.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.AnimateFX-1.2.2.jar=C:\\Users\\Juan Carlos\\Downloads\\AnimateFX-1.2.2.jar
-file.reference.controlsfx-8.40.18.jar=C:\\Users\\Juan Carlos\\Downloads\\controlsfx-8.40.18.jar
-file.reference.gson-2.9.1.jar=libs\\gson-2.9.1.jar
-file.reference.jakarta.activation-api-1.2.1.jar=C:\\Users\\Juan Carlos\\Downloads\\jakarta.activation-api-1.2.1.jar
-file.reference.javax.json-1.1.4.jar=C:\\Users\\Juan Carlos\\Downloads\\javax.json-1.1.4.jar
-file.reference.javax.json-api-1.1.4.jar=C:\\Users\\Juan Carlos\\Downloads\\javax.json-api-1.1.4.jar
+file.reference.animateFX-1.2.2.jar=libs/animateFX-1.2.2.jar
+file.reference.controlsfx-8.40.18.jar=libs/controlsfx-8.40.18.jar
+file.reference.gson-2.9.1.jar=libs/gson-2.9.1.jar
+file.reference.jakarta.activation-api-1.2.1.jar=libs/jakarta.activation-api-1.2.1.jar
+file.reference.javax.json-1.1.4.jar=libs/javax.json-1.1.4.jar
+file.reference.javax.json-api-1.1.4.jar=libs/javax.json-api-1.1.4.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gson-2.9.1.jar}:\
-    ${file.reference.AnimateFX-1.2.2.jar}:\
+    ${javafx.classpath.extension}:\
+    ${file.reference.animateFX-1.2.2.jar}:\
     ${file.reference.controlsfx-8.40.18.jar}:\
-    ${file.reference.javax.json-api-1.1.4.jar}:\
-    ${file.reference.javax.json-1.1.4.jar}:\
+    ${file.reference.gson-2.9.1.jar}:\
     ${file.reference.jakarta.activation-api-1.2.1.jar}:\
-    ${javafx.classpath.extension}
+    ${file.reference.javax.json-1.1.4.jar}:\
+    ${file.reference.javax.json-api-1.1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -84,14 +85,19 @@ javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
 javafx.classpath.extension=\
-    ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
-    ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
-    ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
+    ${platforms.java1.8.home}/jre/lib/javaws.jar:\
+    ${platforms.java1.8.home}/jre/lib/deploy.jar:\
+    ${platforms.java1.8.home}/jre/lib/plugin.jar
+javafx.deploy.adddesktopshortcut=false
+javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
+javafx.deploy.disable.proxy=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
+javafx.deploy.installpermanently=false
+javafx.deploy.permissionselevated=false
 # Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
 javafx.disable.concurrent.runs=false
 # Set true to enable multiple concurrent runs of the same WebStart or Run-in-Browser project
@@ -112,6 +118,9 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
+javafx.signing.blob=false
+javafx.signing.enabled=false
+javafx.signing.type=notsigned
 jlink.launcher=false
 jlink.launcher.name=PacketWorld
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
@@ -125,7 +134,8 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+native.bundling.enabled=false
+platform.active=java1.8
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
