Consumo de la API en servidor

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,13 +45,13 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}:\
     ${file.reference.animateFX-1.2.2.jar}:\
     ${file.reference.controlsfx-8.40.18.jar}:\
     ${file.reference.gson-2.9.1.jar}:\
     ${file.reference.jakarta.activation-api-1.2.1.jar}:\
     ${file.reference.javax.json-1.1.4.jar}:\
-    ${file.reference.javax.json-api-1.1.4.jar}
+    ${file.reference.javax.json-api-1.1.4.jar}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -85,9 +85,9 @@ javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
 javafx.classpath.extension=\
-    ${platforms.java1.8.home}/jre/lib/javaws.jar:\
-    ${platforms.java1.8.home}/jre/lib/deploy.jar:\
-    ${platforms.java1.8.home}/jre/lib/plugin.jar
+    ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
+    ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
+    ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
 javafx.deploy.adddesktopshortcut=false
 javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
@@ -135,7 +135,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=false
-platform.active=java1.8
+platform.active=JDK_1.8
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
